@@ -9,6 +9,7 @@ Mantis ChangeLog
 - 0004093: [filters] Custom field values are a larger type size in view_all_bug_page
 - 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
 - 0004083: [sponsorships] Users without email address must not be able to sponsor issues (thraxisp)
+- 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
 - Updated Brazilian Portuguese language.
 
 2004.07.20  -  0.19.0a2
